119. Creando la vista crear y formulario

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -30,36 +30,27 @@
 
 <div class="container">
     <h1 class="text-secondary border border-success border-top-0 border-left-0 border-right-0" th:text="${titulo}"></h1>
-    <a th:href="@{/form}">crear cliente</a>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>id</th>
-            <th>nombre</th>
-            <th>apellido</th>
-            <th>email</th>
-            <th>fecha</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="cliente: ${clientes}">
-            <td th:text="${cliente.id}"></td>
-            <td th:text="${cliente.nombre}"></td>
-            <td th:text="${cliente.apellido}"></td>
-            <td th:text="${cliente.email}"></td>
-            <td th:text="${cliente.createAt}"></td>
-        </tr>
-        </tbody>
-    </table>
+
+    <form th:action="@{/form}" th:object="${cliente}" method="post">
+        <table>
+            <tr>
+                <td>Nombre</td>
+                <td><input type="text" th:field="*{nombre}" class="form-control"/></td>
+            </tr>
+            <tr>
+                <td>Apellido</td>
+                <td><input type="text" th:field="*{apellido}" class="form-control"/></td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td><input type="email" th:field="*{email}" class="form-control"/></td>
+            </tr>
+            <tr>
+                <td><input type="submit" value="Crear Cliente" class="btn btn-primary"/></td>
+            </tr>
+        </table>
+        <td><input type="hidden" th:field="*{id}"/></td>
+    </form>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
 </body>
 </html>
