--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -13,7 +13,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Spring Boot</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -32,22 +33,33 @@
     <h1 class="text-secondary border border-success border-top-0 border-left-0 border-right-0" th:text="${titulo}"></h1>
 
     <form th:action="@{/form}" th:object="${cliente}" method="post">
-        <table>
-            <tr>
-                <td>Nombre</td>
-                <td><input type="text" th:field="*{nombre}" class="form-control"/></td>
-            </tr>
-            <tr>
-                <td>Apellido</td>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label">Nombre</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{nombre}" class="form-control"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label">Apellido</label>
+            <div class="col-sm-6">
                 <td><input type="text" th:field="*{apellido}" class="form-control"/></td>
-            </tr>
-            <tr>
-                <td>Email</td>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-6">
                 <td><input type="email" th:field="*{email}" class="form-control"/></td>
-            </tr>
-            <tr>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-6">
                 <td><input type="submit" value="Crear Cliente" class="btn btn-primary"/></td>
-            </tr>
+            </div>
+        </div>
+
         </table>
         <td><input type="hidden" th:field="*{id}"/></td>
     </form>
