--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -55,6 +55,13 @@
         </div>
 
         <div class="form-group">
+            <label class="col-sm-2 col-form-label">Fecha</label>
+            <div class="col-sm-6">
+                <td><input type="tetx" th:field="*{createAt}" class="form-control"/></td>
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-sm-6">
                 <td><input type="submit" value="Crear Cliente" class="btn btn-primary"/></td>
             </div>
