--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -37,27 +37,31 @@
             <label class="col-sm-2 col-form-label">Nombre</label>
             <div class="col-sm-6">
                 <input type="text" th:field="*{nombre}" class="form-control"/>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-sm-2 col-form-label">Apellido</label>
             <div class="col-sm-6">
-                <td><input type="text" th:field="*{apellido}" class="form-control"/></td>
+                <input type="text" th:field="*{apellido}" class="form-control"/>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-6">
-                <td><input type="email" th:field="*{email}" class="form-control"/></td>
+                <input type="email" th:field="*{email}" class="form-control"/>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-sm-2 col-form-label">Fecha</label>
             <div class="col-sm-6">
-                <td><input type="tetx" th:field="*{createAt}" class="form-control"/></td>
+                <input type="tetx" th:field="*{createAt}" class="form-control"/>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
             </div>
         </div>
 
