--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -32,6 +32,11 @@
 <div class="container">
     <h1 class="text-secondary border border-success border-top-0 border-left-0 border-right-0" th:text="${titulo}"></h1>
 
+    <div th:object="${cliente}" th:remove="tag">
+        <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+        </ul>
+    </div>
     <form th:action="@{/form}" th:object="${cliente}" method="post">
 
         <div class="form-group row">
